# tokenmesh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Index.html  README.md  demo.html  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  claude_integration.py  visual_demo.py
publish-packages/tokenmesh-node/: package-lock.json  package.json
publish-packages/tokenmesh-node/src/: index.d.ts  index.js  index.mjs
publish-packages/tokenmesh-node/tests/: test.js
publish-packages/tokenmesh-pip/: MANIFEST.in  README.md  pyproject.toml
publish-packages/tokenmesh-pip/tokenmesh/core/: chunker.py  normalizer.py  scorer.py
publish-packages/tokenmesh-pip/tokenmesh/integrations/: claude.py
publish-packages/tokenmesh-pip/tokenmesh/utils/: __init__.py
tests/: test_pipeline.py
tokenmesh/: __init__.py  pipeline.py
tokenmesh/core/: __init__.py  deduplicator.py  normalizer.py
tokenmesh/integrations/: __init__.py
tokenmesh/utils/: tokencount.py
